--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -33,6 +33,10 @@
 #       of the plants in this group.  1=on, 0=off.
 # startyr = do not attempt to grow this group until this year.
 #        especially useful for invasives.
+# xgrow = extra growth factor; if > 0, plants can convert "extra" ppt
+#         into ephemeral (this year's) biomass by
+#         grams_extra_biomass = mm_extra_ppt * xgrow_factor
+# veg_prod_type = 1 for tree, 2 for shrub, 3 for grass & 4 for forb.  Refer to Soilwat2’s VegProd types in VegProd.h.
 
 
 #TM - density values from Biondini et al 1998 - used density% in Table 2 for p.cool.forb (Achillea millefolium) and
@@ -46,17 +50,17 @@
 # space parameter for shrubs was a guess (KP) 
 #TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
 
-# name     space  density maxest slow stretch xres  estann  on  startyr 
- sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1       
- a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1        
- a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1        
- p.cool.forb   0.160  8.0000   1  0.0500   2     1       0   1      1        
- p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1        
- a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1        
- p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1        
- p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1        
- shrub         0.090  1.0000   1  0.0500   2     1       0   1      1        
- succulents    0.030  0.3100   1  0.0500   8     1       0   1      1        
+# name     space  density maxest slow stretch xres  estann  on  startyr xgrow  veg_prod_type
+ sagebrush     0.320  1.0000   1  0.0500   8     1       0   1      1     0.00000   2  
+ a.cool.forb   0.030  5.0000   1  0.0500   2     1       0   1      1     0.00000   4   
+ a.warm.forb   0.020  3.0000   1  0.0500   2     1       0   1      1     0.00000   4   
+ p.cool.forb   0.160  8.0000   1  0.0500   2     1       0   1      1     0.00000   4    
+ p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1     0.00000   4    
+ a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1     0.00000   3    
+ p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1     0.00000   3    
+ p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1     0.00000   3    
+ shrub         0.090  1.0000   1  0.0500   2     1       0   1      1     0.00000   2   
+ succulents    0.030  0.3100   1  0.0500   8     1       0   1      1     0.00000   2    
 # a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1        
 
 [end]  # section end
