--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -61,7 +61,7 @@
  p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1     0.00000   3    
  shrub         0.090  1.0000   1  0.0500   2     1       0   1      1     0.00000   2   
  succulents    0.030  0.3100   1  0.0500   8     1       0   1      1     0.00000   2    
-# a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1        
+# a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1     0.00000   3   
 
 [end]  # section end
 
