--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -3,4 +3,5 @@ PRECIP  SUM  YR  1  end  precip
 TEMP    AVG  YR  1  end  temp
 AET     SUM  YR  1  end  aet
 SWCBULK     FIN  MO  1  end  swc_bulk
-TIMESTEP dy wk mo
+SWA  AVG  MO  1  end  swa
+TIMESTEP dy wk mo yr
