--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -1,7 +1,7 @@
+TIMESTEP dy wk mo
 TRANSP  SUM  MO  1  end  transp
 PRECIP  SUM  YR  1  end  precip
 TEMP    AVG  YR  1  end  temp
 AET     SUM  YR  1  end  aet
 SWCBULK     FIN  MO  1  end  swc_bulk
 SWA  AVG  MO  1  end  swa
-TIMESTEP dy wk mo yr
