--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -48,6 +48,7 @@
 # dispersal = turn on/off seed dispersal for this species. 1=use, 0=don't use.
 # 	dispersal is only applicable when using gridded option.
 # var = the variance parameter of the beta distribution for establishment.
+# pseed = the average seed production of annuals per 1g per 1m^2 and per year.
 
 
 ###PARAMETER SOURCES     
@@ -75,25 +76,25 @@
 #		ALSO tested max biomass for ARTR - found 400 worked best but is flexible 200-500 with above irates
 #		ALSO tested max age for ARTR - found that model is not very sensitive to max age but literature shows 100-150 max age
 
-# name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff   var  
- artr       1   100 0.02000 0.900    4       3    0.05000   2   2.000  400.00      n       0       2  0.0100     1     0 
- trdu       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     0     0 
- cryp       2    1  0.94700 0.900    2       3    0.30    9   0.035   4.700      n       0       2  0.0000     1     0.0002 
- amre       3    1  0.94700 0.900    2       3    0.0300    5   0.035   4.429      n       0       2  0.0000     0     0
- chen       3    1  0.94700 0.900    2       2    0.250    9   0.035   4.429      n       0       1  0.0000     1     0.0002
- acmi       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     0     0
- phho       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     1     0
- arfr       5    5  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     1     0
- lipu       5   35  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     0     0
- brte       6    1  0.94700 0.900    2       3    0.100   40   0.020   5.000	   n       0       2  0.0000     1     0.0002
- vuoc       6    1  0.94700 0.900    2       1    0.0300    16  0.020   5.000      n       0       2  0.0000     0     0
- pssp       7   35  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     1     0
- koma       7    5  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0     0
- bogr       8   35  0.47400 0.900    2       2    0.0500    2   0.605  15.096      y       3       1  0.0100     0     0
- spcr       8   29  0.47400 0.900    2       3    0.0500    3   0.605   6.000      y       0       1  0.0100     1     0
- gusa       9   35  0.20000 0.900    2       3    0.1500    2   0.986  12.126      n       0       2  0.0100     0     0
- chvi       9   17  0.20000 0.900    2 		2     0.1500    2   0.986  70.726      n       0       2  0.0100     1     0
- oppo       10  30  0.28900 0.900    4       4    0.05000   1   2.250   15.00      y       3       1  0.0100     1     0	
+# name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff   var    pseed
+ artr       1   100 0.02000 0.900    4       3    0.05000   2   2.000  400.00      n       0       2  0.0100     1     0        0
+ trdu       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     0     0        0
+ cryp       2    1  0.94700 0.900    2       3    0.25      9   0.035   4.700      n       0       2  0.0000     1     0.0001   100
+ amre       3    1  0.94700 0.900    2       3    0.0300    5   0.035   4.429      n       0       2  0.0000     0     0        0
+ chen       3    1  0.94700 0.900    2       2    0.20      9   0.035   4.429      n       0       1  0.0000     1     0.0001   0
+ acmi       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     0     0        100
+ phho       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     1     0        0
+ arfr       5    5  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     1     0        0
+ lipu       5   35  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     0     0        0
+ brte       6    1  0.94700 0.900    2       3    0.25      10   0.020   5.000	   n       0       2  0.0000     1     0.0001   1000
+ vuoc       6    1  0.94700 0.900    2       1    0.0300    16  0.020   5.000      n       0       2  0.0000     0     0        0
+ pssp       7   35  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     1     0        0
+ koma       7    5  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0     0        0
+ bogr       8   35  0.47400 0.900    2       2    0.0500    2   0.605  15.096      y       3       1  0.0100     0     0        0
+ spcr       8   29  0.47400 0.900    2       3    0.0500    3   0.605   6.000      y       0       1  0.0100     1     0        0
+ gusa       9   35  0.20000 0.900    2       3    0.1500    2   0.986  12.126      n       0       2  0.0100     0     0        0
+ chvi       9   17  0.20000 0.900    2       2    0.1500    2   0.986  70.726      n       0       2  0.0100     1     0        0
+ oppo       10  30  0.28900 0.900    4       4    0.05000   1   2.250   15.00      y       3       1  0.0100     1     0        0	   
 
 #spp1       7    1  0.94700 0.900    2       3    0.01500   2   0.020   0.429      n       0       2  0.0000     0     0
 #spp2       7    1  0.94700 0.900    2       3    0.01500   2   0.020   2.126      n       0       2  0.0000     0     0
