--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -33,7 +33,8 @@
 #          or < 1.
 # eind  = maximum number of individuals that can establish in a year
 #         for annuals, max number of viable seeds that will grow to maturity
-#         on the plot. ie, fecundity.
+#         on the plot. ie, fecundity. brte index: 100-1000 for invaded area;
+#          40-60 for medium invasive area; 1-5 for non invaded area.
 # minbio = biomass of an established seedling in grams
 # maxbio = biomass of a mature individual in grams
 #         for annuals, see also irate definition.
@@ -86,7 +87,7 @@
  phho       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     1     0        0
  arfr       5    5  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     1     0        0
  lipu       5   35  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     0     0        0
- brte       6    1  0.94700 0.900    2       3    0.01    1000   0.020   5.000	   n       0       2  0.0000     1     0.0001   1000
+ brte       6    1  0.94700 0.900    2       3    0.05    1   0.020   5.000	   n       0       2  0.0000     1     0.0001   1000
  vuoc       6    1  0.94700 0.900    2       1    0.0300    16  0.020   5.000      n       0       2  0.0000     0     0        0
  pssp       7   35  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     1     0        0
  koma       7    5  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0     0        0
@@ -110,7 +111,7 @@
 #
 # name     viable xdecay 
  vuoc        10    1.00
- brte        3	   0.50
+ brte        3	   1.00
  cryp        10    1.00
  trdu        10    1.00
  amre        10    1.00
