Changed the output format for STEPPE. Now the values are only output to the file corresponding to the timeperiod that it was defined to be used with in outsetup.in.

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -1,4 +1,4 @@
-TIMESTEP mo
+TIMESTEP mo yr // output files to be created
 TRANSP  SUM  MO  1  end  transp
 PRECIP  SUM  YR  1  end  precip
 TEMP    AVG  YR  1  end  temp
