--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -1,4 +1,4 @@
-TIMESTEP mo yr // output files to be created
+TIMESTEP mo yr
 TRANSP  SUM  MO  1  end  transp
 PRECIP  SUM  YR  1  end  precip
 TEMP    AVG  YR  1  end  temp
