--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -1,5 +1,46 @@
+# Output setup file for STEPWAT
+#
+# Notes:
+# Time periods available:  DY,WK,MO,YR
+#   eg, if DY is chosen then 100,200 would mean to use the second hundred days
+#   But if YR is chosen, start and end numbers are in days so only those days
+#   are reported for the yearly average.
+# Some keys from older versions (fortran and the c versions mimicking the fortran
+#   version) are not currently implemented:
+#   ALLH20, WTHR.
+#
+# ESTABL only produces yearly output, namely, DOY for each species requested.
+#   Thus, to minimize typo errors, all flags are ignored except the filename.
+#   Output is simply the day of the year establishment occurred for each species
+#   in each year of the model run.  Refer to the estabs.in file for more info.
+#
+# DEEPSWC produces output only if the deepdrain flag is set in siteparam.in.
+#
+# Filename prefixes should not have a file extension.
+# Case is unimportant.
+#
+# SUMTYPEs are one of the following:
+#  OFF - no output for this variable
+#  SUM - sum the variable for each day in the output period
+#  AVG - average the variable over the output period
+#  FIN - output value of final day in the period; soil water variables only.
+# Note that SUM and AVG are the same if timeperiod = dy.
+#
+# (01/17/2013) TIMESTEP key indicates which periods you want to output.
+# You can output all the periods at a time, just one, or however many
+# you want. To change which periods to output type 'dy' for day,
+# 'wk' for week, 'mo' for month, and 'yr' for year after TIMESTEP
+# in any order. For example: "TIMESTEP mo wk" will output for month and week
+
+# (1/9/2018) USE_TIMESTEP: this determines if using the timestep periods or using the PERIOD defined for each individual variable (1 = use, 0 = dont use)
+# If set to 0 TIMESTEP line determines which output files are to be created so need to have all the timeperiods defined in the values PERIOD
+# EX: if only using TRANSP and PRECIP and the periods are MO for TRANSP and DY for PRECIP TIMESTEP needs to be "TIMESTEP dy mo" so program knows to create day and month output files
+# if "USE_TIMESTEP 1" then can have any combo of periods after TIMESTEP
+
+USE_TIMESTEP 0
 TIMESTEP dy wk mo yr
 
+# key		SUMTYPE	PERIOD	start	end	filename_prefix
 TRANSP  	SUM  	MO  	1  	end  	transp
 PRECIP  	SUM  	YR  	1  	end  	precip
 TEMP    	AVG  	YR  	1  	end  	temp
