Added memory for Carbon outputs and added timestep checks for proper output with use_timestep = 0 and use_timestep = 1

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -41,23 +41,24 @@ TRANSP  	SUM  	YR  	1  	end  	transp
 PRECIP  	SUM  	YR  	1  	end  	precip
 TEMP    	AVG  	YR  	1  	end  	temp
 AET     	SUM  	YR  	1  	end  	aet
-SWCBULK     FIN  	YR  	1  	end  	swc_bulk
+SWCBULK     	FIN  	YR  	1  	end  	swc_bulk
 SWA  		AVG  	YR  	1  	end  	swa
-VWCBULK		avg 	YR 		1 	end 	vwc_bulk
-VWCMATRIC 	avg 	YR 		1 	end 	vwc_matric
-SWPMATRIC 	avg 	YR 		1 	end 	swp_matric
-SWABULK 	AVG 	YR 		1 	end 	swa_bulk
-SWAMATRIC 	avg 	YR 		1 	end 	swa_matric
-SURFACEWATER avg 	YR 		1 	end 	surface_water
-RUNOFF 		sum 	YR 		1 	end 	runoff
-EVAPSOIL	sum		YR		1	end		evap_soil
-EVAPSURFACE	sum		YR		1	end		evap_surface
-INTERCEPTION sum	YR		1	end		interception
-SOILINFILT	sum		YR		1	end		infiltration
-LYRDRAIN	sum		YR		1	end		percolation
-HYDRED		sum		YR		1	end		hydred
-PET			sum		YR		1	end		pet
-WETDAY		sum		YR		1	end		wetdays
-SNOWPACK	avg		YR		1	end		snowpack
-DEEPSWC		sum		YR		1	end		deep_drain
-SOILTEMP	avg		YR		1	end		temp_soil
+VWCBULK		avg 	YR 	1 	end 	vwc_bulk
+VWCMATRIC 	avg 	YR 	1 	end 	vwc_matric
+SWPMATRIC 	avg 	YR 	1 	end 	swp_matric
+SWABULK 	AVG 	YR 	1 	end 	swa_bulk
+SWAMATRIC 	avg 	YR 	1 	end 	swa_matric
+SURFACEWATER avg 	YR 	1 	end 	surface_water
+RUNOFF 		sum 	YR 	1 	end 	runoff
+EVAPSOIL	sum	YR	1	end	evap_soil
+EVAPSURFACE	sum	YR	1	end	evap_surface
+INTERCEPTION 	sum	YR	1	end	interception
+SOILINFILT	sum	YR	1	end	infiltration
+LYRDRAIN	sum	YR	1	end	percolation
+HYDRED		sum	YR	1	end	hydred
+PET		sum	YR	1	end	pet
+WETDAY		sum	YR	1	end	wetdays
+SNOWPACK	avg	YR	1	end	snowpack
+DEEPSWC		sum	YR	1	end	deep_drain
+SOILTEMP	avg	YR	1	end	temp_soil
+CO2EFFECTS     	avg	YR      1     	end     vegetation      /* vegetation biomass: biomass (g/m2) for grasses, shrubs, trees, forbs, and total; live biomass (g/m2) fgrasses, shrubs, trees, forbs, and total; biomass CO2-effect (multiplier) for grasses, shrubs, trees, and forbs; WUE CO2-effect (multiplier) for grasses, shrubs, trees, and forbs
