--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -1,10 +1,18 @@
-# Output setup file for STEPWAT
+# Output setup file for SOILWAT2
 #
 # Notes:
-# Time periods available:  DY,YR
+# Time periods available:  DY,WK,MO,YR
 #   eg, if DY is chosen then 100,200 would mean to use the second hundred days
 #   But if YR is chosen, start and end numbers are in days so only those days
 #   are reported for the yearly average.
+# Some keys from older versions (fortran and the c versions mimicking the fortran
+#   version) are not currently implemented:
+#   ALLH20, WTHR.
+#
+# ESTABL only produces yearly output, namely, DOY for each species requested.
+#   Thus, to minimize typo errors, all flags are ignored except the filename.
+#   Output is simply the day of the year establishment occurred for each species
+#   in each year of the model run.  Refer to the estabs.in file for more info.
 #
 # DEEPSWC produces output only if the deepdrain flag is set in siteparam.in.
 #
@@ -16,49 +24,43 @@
 #  SUM - sum the variable for each day in the output period
 #  AVG - average the variable over the output period
 #  FIN - output value of final day in the period; soil water variables only.
-# Note that SUM and AVG are the same if timeperiod = DY.
+# Note that SUM and AVG are the same if timeperiod = dy.
 #
 # (01/17/2013) TIMESTEP key indicates which periods you want to output.
 # You can output all the periods at a time, just one, or however many
 # you want. To change which periods to output type 'dy' for day,
 # 'wk' for week, 'mo' for month, and 'yr' for year after TIMESTEP
-# in any order. For example: "TIMESTEP mo wk" will output for month and week
-#
-# (1/9/2018) USE_TIMESTEP: this determines if the TIMESTEP or PERIOD is used to define time periods for each individual output variable.
-# If "USE_TIMESTEP = 0", then the time period for each output variable listed below will be determined by the PERIOD column. Note only 1 time period can be listed for each output variable using this option. 
-# Also note that all of the time periods specified in the PERIOD column must be listed after TIMESTEP, so the correct output files are generated.   
-# EX: if only using TRANSP and PRECIP and the periods are MO for TRANSP and DY for PRECIP TIMESTEP needs to be "TIMESTEP dy mo" so program knows to create day and month output files
-# If "USE_TIMESTEP = 1", then all output variables listed below will be outputted for the time periods specified after TIMESTEP (e.g. dy, yr). Note, this option allows for output variables to be generated for multiple time periods.
-# Also note that when using this option, each variable must only be listed once in the Table below. The PERIOD column is ignored with "USE_TIMESTEP = 1".
+# in any order. For example: 'TIMESTEP mo wk' will output for month and week
 #
 # To generate SWA output, the SWCBULK variable must also be requested.
 
-USE_TIMESTEP 1
-TIMESTEP dy yr
+TIMESTEP dy yr # must be lowercase
 
-# key		SUMTYPE	PERIOD	start	end	filename_prefix
-TRANSP  	SUM  	YR  	1  	end  	transp
-PRECIP  	SUM  	YR  	1  	end  	precip
-TEMP    	AVG  	YR  	1  	end  	temp
-AET     	SUM  	YR  	1  	end  	aet
-SWCBULK     	FIN  	YR  	1  	end  	swc_bulk
-SWA  		AVG  	YR  	1  	end  	swa
-VWCBULK		avg 	YR 	1 	end 	vwc_bulk
-VWCMATRIC 	avg 	YR 	1 	end 	vwc_matric
-SWPMATRIC 	avg 	YR 	1 	end 	swp_matric
-SWABULK 	AVG 	YR 	1 	end 	swa_bulk
-SWAMATRIC 	avg 	YR 	1 	end 	swa_matric
-SURFACEWATER avg 	YR 	1 	end 	surface_water
-RUNOFF 		sum 	YR 	1 	end 	runoff
-EVAPSOIL	sum	YR	1	end	evap_soil
-EVAPSURFACE	sum	YR	1	end	evap_surface
-INTERCEPTION 	sum	YR	1	end	interception
-SOILINFILT	sum	YR	1	end	infiltration
-LYRDRAIN	sum	YR	1	end	percolation
-HYDRED		sum	YR	1	end	hydred
-PET		sum	YR	1	end	pet
-WETDAY		sum	YR	1	end	wetdays
-SNOWPACK	avg	YR	1	end	snowpack
-DEEPSWC		sum	YR	1	end	deep_drain
-SOILTEMP	avg	YR	1	end	temp_soil
-CO2EFFECTS     	avg	YR      1     	end     vegetation      /* vegetation biomass: biomass (g/m2) for grasses, shrubs, trees, forbs, and total; live biomass (g/m2) fgrasses, shrubs, trees, forbs, and total; biomass CO2-effect (multiplier) for grasses, shrubs, trees, and forbs; WUE CO2-effect (multiplier) for grasses, shrubs, trees, and forbs
+#      key     SUMTYPE   PERIOD   start    end    filename_prefix   comment
+         TEMP     AVG       YR       1     end        temp_air      /* max., min, average temperature (C) */
+       PRECIP     SUM       YR       1     end          precip      /* total precip = sum(rain, snow), rain, snow-fall, snowmelt, and snowloss (cm) */
+   SOILINFILT     SUM       YR       1     end    infiltration      /* water to infiltrate in top soil layer (cm), runoff (cm); (not-intercepted rain)+(snowmelt-runoff) */
+       RUNOFF     SUM       YR       1     end          runoff      /* runoff/runon (cm): net runoff, runoff from ponded water, runoff from snowmelt, runon of surface water from hypothetical upslope neighbor */
+      VWCBULK     AVG       YR       1     end        vwc_bulk      /* bulk volumetric soilwater (cm / layer) */
+    VWCMATRIC     AVG       YR       1     end      vwc_matric      /* matric volumetric soilwater (cm / layer) */
+      SWCBULK     AVG       YR       1     end        swc_bulk      /* bulk soilwater content (cm / cm layer); swc.l1(today) = swc.l1(yesterday)+inf_soil-lyrdrain.l1-transp.l1-evap_soil.l1; swc.li(today) = swc.li(yesterday)+lyrdrain.l(i-1)-lyrdrain.li-transp.li-evap_soil.li; swc.llast(today) = swc.llast(yesterday)+lyrdrain.l(last-1)-deepswc-transp.llast-evap_soil.llast */
+	  SWA  	  AVG  	    YR       1     end        swa
+      SWABULK     AVG       YR       1     end        swa_bulk      /* DEFUNCT: MAY BE REMOVED IN FUTURE VERSIONS; bulk available soil water (cm/layer) = swc - wilting point */
+    SWAMATRIC     AVG       YR       1     end      swa_matric      /* DEFUNCT: MAY BE REMOVED IN FUTURE VERSIONS; matric available soil water (cm/layer) = swc - wilting point */
+    SWPMATRIC     AVG       YR       1     end      swp_matric      /* matric soilwater potential (-bars) */
+ SURFACEWATER     AVG       YR       1     end   surface_water      /* surface water (cm) */
+       TRANSP     SUM       YR       1     end          transp      /* transpiration from each soil layer (cm): total, trees, shrubs, forbs, grasses */
+     EVAPSOIL     SUM       YR       1     end       evap_soil      /* bare-soil evaporation from each soil layer (cm) */
+  EVAPSURFACE     SUM       YR       1     end    evap_surface      /* evaporation (cm): total, trees, shrubs, forbs, grasses, litter, surface water */
+ INTERCEPTION     SUM       YR       1     end    interception      /* intercepted rain (cm): total, trees, shrubs, forbs, grasses, and litter (cm) */
+     LYRDRAIN     SUM       YR       1     end     percolation      /* water percolated from each layer (cm) */
+       HYDRED     SUM       YR       1     end          hydred      /* hydraulic redistribution from each layer (cm): total, trees, shrubs, forbs, grasses */
+          AET     SUM       YR       1     end             aet      /* actual evapotr. (cm) */
+          PET     SUM       YR       1     end             pet      /* potential evaptr (cm) */
+       WETDAY     SUM       YR       1     end         wetdays      /* days above swc_wet */
+     SNOWPACK     AVG       YR       1     end        snowpack      /* snowpack water equivalent (cm), snowdepth (cm); since snowpack is already summed, use avg - sum sums the sums = nonsense */
+      DEEPSWC     SUM       YR       1     end      deep_drain      /* deep drainage into lowest layer (cm) */
+     SOILTEMP     AVG       YR       1     end       temp_soil      /* soil temperature from each soil layer (in celsius) */
+       ESTABL     OFF       YR       1     end          estabs      /* yearly establishment results */
+   CO2EFFECTS     AVG       YR       1     end      vegetation      /* vegetation biomass: biomass (g/m2) for grasses, shrubs, trees, forbs, and total; live biomass (g/m2) fgrasses, shrubs, trees, forbs, and total; biomass CO2-effect (multiplier) for grasses, shrubs, trees, and forbs; WUE CO2-effect (multiplier) for grasses, shrubs, trees, and forbs
+
