--- a/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/species.in
@@ -47,6 +47,10 @@
 #      see also the same flag in group parameters file.
 # dispersal = turn on/off seed dispersal for this species. 1=use, 0=don't use.
 # 	dispersal is only applicable when using gridded option.
+# var = the variance parameter of the beta distribution for annual establishment.
+#       reference value:0.0001, used in L219 of ST_resgroup.c to calculate the parameters 
+#       of alpha and beta in beta random number draw. Mean value = seedling_estab_prob.  
+# pseed = the average seed production of annuals per 1g, per 1m^2 and per year.
 
 ###PARAMETER SOURCES     
 #TM - eind values are density values taken from Adler datasets from Idaho. Species vuoc (1090), bogr, spcr, brar (2080), are from Karl et al 1999
@@ -75,15 +79,15 @@
 
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff  var    pseed
  artr       1   100 0.40000 0.900    4       3    0.30000   2   2.000  400.00      n       0       2  0.0100     1    0.0     0
- trdu       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     0    0.0     0
- cryp       2    1  0.94700 0.900    2       3    0.0300    5   0.035   4.700      n       0       2  0.0000     1    0.0001   100
+ trdu       2    1  0.94700 0.900    2       3    0.0300    8   0.035   4.700      n       0       2  0.0000     0    0.0     0
+ cryp       2    1  0.94700 0.900    2       3    0.2000    8   0.035   4.700      n       0       2  0.0000     1    0.0001   100
  amre       3    1  0.94700 0.900    2       3    0.0300    5   0.035   4.429      n       0       2  0.0000     0    0.0       0
- chen       3    1  0.94700 0.900    2       2    0.0300    5   0.035   4.429      n       0       1  0.0000     1    0.0001    100
+ chen       3    1  0.94700 0.900    2       2    0.2000    8   0.035   4.429      n       0       1  0.0000     1    0.0001    100
  acmi       4   10  0.42600 0.900    2       3    0.15000   6   0.035   5.000      n       0       2  0.0100     0    0.0       0
  phho       4   10  0.42600 0.900    2       3    0.15000  15   0.035   5.000      n       0       2  0.0100     1    0.0       0
  arfr       5    5  0.42600 0.900    2       3    0.10000   5   0.035   7.480      n       0       2  0.0100     1    0.0       0
  lipu       5   35  0.42600 0.900    2       3    0.10000   4   0.035   7.480      n       0       2  0.0100     0    0.0       0
- brte       6    1  0.94700 0.900    2       3    0.01500   20  0.020   5.000	   n       0       2  0.0000     1    0.0001   1000
+ brte       6    1  0.94700 0.900    2       3    0.2000   10  0.020   5.000	   n       0       2  0.0000     1    0.0001   1000
  vuoc       6    1  0.94700 0.900    2       1    0.0300    16  0.020   5.000      n       0       2  0.0000     0    0.0       0
  pssp       7   35  0.47400 0.900    2       3    0.1500    20   0.500  15.096     y       3       2  0.0100     1    0.0       0
  koma       7    5  0.47400 0.900    2       3    0.1500    2   0.500  15.096      y       3       2  0.0100     0    0.0       0
