--- a/testing.sagebrush.master/Stepwat_Inputs/Input/disturbance.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/disturbance.in
@@ -70,23 +70,22 @@
 
 
 # NOTE: 
-# Cheatgrass_index_number = order rg number input by species.in
 # ignition = cheatgrass biomass ignition in 1*1 m2 plot; When < 12.05 the wild fire will occur randomly; 
             # when = 12.05 the fire yearly possibility will related with cheatgrass biomass; 
             # When = 0 there will be no wild fire happen.  
 # cheatgrass_coefficient 
 # wild_fire_slope = slope of fire yearly possibility & cheatgrass biomass
-# name        cheatgrass_index_number ignition cheatgrass_coefficient wild_fire_slope  
- sagebrush     9   12.05 -0.117  0.0093    
- a.cool.forb   9   12.05 -0.117  0.0093   
- a.warm.forb   9   12.05 -0.117  0.0093  
- p.cool.forb   9   12.05 -0.117  0.0093  
- p.warm.forb   9   12.05 -0.117  0.0093  
- a.cool.grass  9   12.05 -0.117  0.0093  
- p.cool.grass  9   12.05 -0.117  0.0093  
- p.warm.grass  9   12.05 -0.117  0.0093   
- shrub         9   12.05 -0.117  0.0093 
- succulents    9   12.05 -0.117  0.0093   
+# name     ignition cheatgrass_coefficient wild_fire_slope  
+ sagebrush      12.05 -0.117  0.0093    
+ a.cool.forb    12.05 -0.117  0.0093   
+ a.warm.forb    12.05 -0.117  0.0093  
+ p.cool.forb    12.05 -0.117  0.0093  
+ p.warm.forb    12.05 -0.117  0.0093  
+ a.cool.grass   12.05 -0.117  0.0093  
+ p.cool.grass   12.05 -0.117  0.0093  
+ p.warm.grass   12.05 -0.117  0.0093   
+ shrub          12.05 -0.117  0.0093 
+ succulents     12.05 -0.117  0.0093   
 
 
 [end]  # section end
