Updating submodule to point to SOILWAT2 master.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "sw_src"]
 	path = sw_src
 	url = https://github.com/Burke-Lauenroth-Lab/SOILWAT2.git
-	branch = soilwat_save_output
+	branch = master
         ignore = dirty
