Output fire counts in bmassavg.csv

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/bmassflags.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/bmassflags.in
@@ -8,8 +8,8 @@
 ####################################################
 #
 #
-# Sumry Yearly Header Sep YrNum Disturb PPT PClass Temp GrpBmass GrpPR Grpwf GrpPf GrpSize SppBmass Indivs
-     y      n	   y   ,     y      n   y     n     y       y     y      n     n      y       y      y
+# Sumry Yearly Header Sep YrNum Disturb PPT PClass Temp GrpBmass GrpPR GrpSize Grpwf GrpPf SppBmass Indivs
+     y      n	   y   ,     y      n   y     n     y       y     y      y     y      n       y      y
 #===================================================
 # The input line is a set of yes/no flags that define
 # whether that parameter will be output, except for
