--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 *.exe
 *.o
 *.so
- 
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -29,13 +29,13 @@
 *.rar
 *.tar
 *.zip
- 
+
 # Logs and databases #
 ######################
 *.log
 *.sql
 *.sqlite
- 
+
 # OS generated files #
 ######################
 .DS_Store
@@ -57,10 +57,10 @@ stepwat.dSYM/
 testing/stepwat
 testing/valgrind.out
 testing/stepwat.dSYM/
-testing/Output
 
-testing.sagebrush.MT_drs/Output
-testing.sagebrush.MT_drs/Stepwat_Inputs/Output
 testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
 *.out
 *.log
+
+*/Output
+*/Stepwat_Inputs/Output
