--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/outsetup_v30.in
@@ -31,6 +31,8 @@
 # you want. To change which periods to output type 'dy' for day,
 # 'wk' for week, 'mo' for month, and 'yr' for year after TIMESTEP
 # in any order. For example: 'TIMESTEP mo wk' will output for month and week
+# IMPORTANT!! mo must be set for monthly transpiration to be passed to STEPPE, which 
+# determines resources each year. If month is not specified, the code will break.
 
 TIMESTEP dy mo yr # must be lowercase
 
