Small fixes to CI scripts & reduced testing example
- changes to default values in `model.in` (@kpalmqui is this ok or should I set up a separate set of files for CI checking?):
* I reduced the number of iterations from 50 to 3 and the number of simulation years from 300 to 100 and set the seed
* CIs are canceling our runs with the previous inputs: on my local machine a run with 300 years resulted in 11 GB of memory consumption (see issue #134); with the new inputs, it uses 1.2 GB

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ script:
   # check that we can compile STEPWAT2
   - set CPPFLAGS=-DSWDEBUG && make clean && make
   # check that we can run the 'default' example
-  - testing.sagebrush.master/Stepwat_Inputs/stepwat -d testing.sagebrush.master/Stepwat_Inputs/ -f files.in -s -o -i
+  - ./testing.sagebrush.master/Stepwat_Inputs/stepwat -d testing.sagebrush.master/Stepwat_Inputs/ -f files.in -s -o -i
   # remove created files including (possibly) large output
   - make cleanall
