--- a/testing.sagebrush.master/Stepwat_Inputs/Input/disturbance.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/disturbance.in
@@ -23,7 +23,8 @@
 #          0 == don't kill
 # killfreq_startyr = start year for killing due to fire, which will continue at the specified kill frequency
 # Prescribed_killfreq = frequency to kill. 
-#            if > 1 yearly interval, only prescribed fire occur after killfreq_startyr.  
+#            if > 1 yearly interval, only prescribed fire occur after killfreq_startyr. Must be set to a floating point
+#			 number: xx.x, 10.0. 
 #            if 0 < Prescribed_killfrq < 1 yearly possibility, occur  with the wild fire whose parameters are below.
 #            if = 0 no prescribed fire. 
 #            Overrides killyr.
@@ -40,17 +41,6 @@
 # proportion_grazing = proportion of biomass removed due to grazing. 
 # grazingfreq_startyr = start year for grazing
 
-#TM - density values from Biondini et al 1998 - used density% in Table 2 for p.cool.forb (Achillea millefolium) and
-#	p.warm.forb (Grindelia squarrosa)
-#TM - density values for annual cool grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/brojap/all.html) converted 56 stems/sqft to stems/sqmeter
-#TM - density for perennial warm grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/koemac/all.html#4) 
-#  used 1052 KOMA per 2 rod squar and converted to 11 per meter square
-#TM - densities from GZTX data for shrub (gusa) & a.warm.forb(chal - used same for a.cool.forb) & p.cool.grass (stco)
-#TM - need density for a.warm.grass - but right now turned off so insterted arbitraty number
-# space parameter for sagebrush, p.cool.grass, p.warm.grass, a.cool.grass, a.warm.grass, forbs from Bradford & Lauenroth 2006
-# space parameter for shrubs was a guess (KP) 
-#TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
-
 # name        killyr killfreq_startyr Prescribed_killfreq   extirp  mort    proportion_killed proportion_recovered grazing_frq proportion_grazing  grazingfreq_startyr
  sagebrush      0      1       0    0     1    1.00  0.00 0  0.00  0
  a.cool.forb    0      1       0    0     1    1.00  0.00 0  0.24  0
@@ -65,9 +55,6 @@
 
 
 [end]  # section end
-
-
-
 
 # NOTE: 
 # ignition = cheatgrass biomass ignition in 1*1 m2 plot; When < 12.05 the wild fire will occur randomly; 
