--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ compiler:
   - gcc
 
 script:
-  # check that we can compile STEPWAT2
-  - set CPPFLAGS=-DSWDEBUG && make clean && make
-  # check that we can run the 'default' example
-  - ./testing.sagebrush.master/Stepwat_Inputs/stepwat -d testing.sagebrush.master/Stepwat_Inputs/ -f files.in -s -o -i
+  # check that we can cleanly compile STEPWAT2 and run the `default`, non-gridded example project
+  - make clean bint_testing_nongridded CPPFLAGS=-DSWDEBUG
   # remove created files including (possibly) large output
   - make cleanall
