Update SOILWAT2 input files in `STEPWAT2/testing.sagebrush.master/Stepwat_Inputs/sxw/`
- adjustments to formatting and naming of SOILWAT2 input files according to `SOILWAT2` repository folder `SOILWAT2/testing/`
- there should be no changes of values that influence testing runs

- removed comment in `outsetup.in` about requirement of a monthly timestep for transpiration -> no longer true (after addressing issue #83)
- fixed `swcsetup.in` (removed duplicated line "first year [...]" and added missing line "method: [...]")
- fixed comment in `siteparam.in` (mentioning of vegetation types in description of `transpiration regions` which is incorrect)
- added missing file `carbon.in` (although currently turned off for `STEPWAT2`)

Other minor changes:
- ST_main.c: fixed `printf` statement for `-o flag` to be of same structure as `-i flag`
- sxw.c: added missing include of `SW_Output.h` (for recently added call to function `SW_OUT_set_SXWrequests`)

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw.in
@@ -5,4 +5,4 @@ Input/sxw/sxwroots.in		#roots
 Input/sxw/sxwphen.in		#phen
 Input/sxw/sxwbvt.in			#bvt
 Input/sxw/sxwprod_v2.in		#prod
-Input/sxw/files_v30.in	#soilwat files.in
+Input/sxw/files_SOILWAT2.in	#soilwat files.in
