--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/siteparam.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/siteparam.in
@@ -8,7 +8,7 @@
 1			# deepdrain (1/0): allow/disallow deep drainage function.
 			#   if deepdrain == 1, model expects extra layer in soils file.
 1.0			# multiplier for PET (eg for climate change).
-0.0			#proportion of ponded surface water removed as runoff daily (value ranges between 0 and 1; 0=no loss of surface water, 1=all ponded water lost via runoff)
+0.0			#proportion of ponded surface water removed as daily runoff (value ranges between 0 and 1; 0=no loss of surface water, 1=all ponded water lost via runoff)
 0.0			#proportion of water that arrives at surface added as daily runon [from a hypothetical identical neighboring site] (value ranges between 0 and +inf; 0=no runon, >0: runon is occuring)
 
 # ---- Snow simulation parameters (SWAT2K model): Neitsch S, Arnold J, Kiniry J, Williams J. 2005. Soil and water assessment tool (SWAT) theoretical documentation. version 2005. Blackland Research Center, Texas Agricultural Experiment Station: Temple, TX.
@@ -28,13 +28,13 @@
 # These control the tangent function (tanfunc) which affects the amount of soil
 # water extractable by evaporation and transpiration.
 # These constants aren't documented by the ELM doc.
-45.          # rate shift (x value of inflection point).  lower value shifts curve
-             # leftward, meaning less water lost to evap at a given swp.  effectively
-             # shortens/extends high rate.
-.1          # rate slope: lower value (eg .01) straightens S shape meaning more gradual
-             # reduction effect; higher value (.5) makes abrupt transition
-.25           # inflection point (y-value of inflection point)
-0.5          # range: diff btw upper and lower rates at the limits
+45.			# rate shift (x value of inflection point).  lower value shifts curve
+			# leftward, meaning less water lost to evap at a given swp.  effectively
+			# shortens/extends high rate.
+.1			# rate slope: lower value (eg .01) straightens S shape meaning more gradual
+			# reduction effect; higher value (.5) makes abrupt transition
+.25			# inflection point (y-value of inflection point)
+0.5			# range: diff btw upper and lower rates at the limits
 
 # ---- Transpiration Coefficients ----
 # comments from Evap constants apply.
@@ -51,8 +51,8 @@
 
 # ---- Soil Temperature Constants ----
 # from Parton 1978, ch. 2.2.2 Temperature-profile Submodel
-300.		# biomass limiter, 300 g/m^2 in Parton's equation for T1(avg daily temperature at the top of the soil)
-15.      	# constant for T1 equation (used if biomass <= biomass limiter), 15 in Parton's equation
+300.			# biomass limiter, 300 g/m^2 in Parton's equation for T1(avg daily temperature at the top of the soil)
+15.			# constant for T1 equation (used if biomass <= biomass limiter), 15 in Parton's equation
 -4.			# constant for T1 equation (used if biomass > biomass limiter), -4 in Parton's equation
 600.        # constant for T1 equation (used if biomass > biomass limiter), 600 in Parton's equation
 0.00070		# constant for cs (soil-thermal conductivity) equation, 0.00070 in Parton's equation
@@ -71,11 +71,9 @@
 # Scenario
 RCP85
 
-
 # ---- Transpiration regions ----
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
 # layer: deepest layer number of the region.
-# Grasses	Shrubs		Trees		Forbs
 #        Layers are defined in soils.in.
 # ndx    layer
 	1		2
